--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title></title>
     </head>
-    <body>
+    <body
+    <h2>test</h2>
         <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
