--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title></title>
     </head>
-    <body
-    <h2>test</h2>
+    <body>
+    <h3>test</h3> <!-- add head line !>
         <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
