--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
+	   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
         <title></title>
     </head>
     <body>
