--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <link 
+        href="stylesheet.css"
+        rel="stylesheet"
+        type="text/css" />
         <title></title>
     </head>
     <body>
