--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
+        <p> I can do this! </p>
         <Strong> I did it. </Strong>
     </body>
 </html>
