--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title></title>
+        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     </head>
     <body>
     <p>this is excellent one</p> <!-- add head line !>
