--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="stylesheet.css">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title></title>
     </head>
