--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>welcome</title>
     </head>
     <body>
     <p>this is excellent one</p> <!-- add head line !>
