Modify strong tag

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Add your site or application content here -->
         <p> I can do this! </p>
 	    <h2><p>this is a good tag in html</p></h2>
-        <Strong> I did it. </Strong>
+        <strong> I did it. </strong>
     </body>
 </html>
 
